--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -4,6 +4,7 @@ abominable ,/adj./@可惡的;,/adj./@可憎的;,/adj./@討厭的;
 abrogation ,/n./@廢除;,/n./@取消;
 absolutely ,/adv./@完全地;,/adv./@绝对地;
 abstemious ,/adj./@有節制的;
+abstinence ,/n./@节制;
 accelerate ,/v./@加速;,/v./@促进;,/v./@增速;
 acceptable ,/adj./@可接受的;
 acceptance ,/n./@接受;,/n./@贊同;,/n./@承兌;,/n./@承認;
@@ -802,6 +803,7 @@ technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
 temptation ,/n./@诱惑;
+tenderness ,/n./@温柔;
 tenebrific ,/redirected./@target="tenebrous";
 tetragraph ,/n./@方塊字;,/n./@四合字母;,/n./@四重音字;,/n./@四重字;
 theocratic ,/adj./@神權政治的;,/adj./@神權政體的;,/adj./@神權的;
