--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -916,6 +916,7 @@ pious ,/adj./@虔誠的;
 pitch ,/vt./@投擲;,/n./@強度;,/n./@音高;,/n./@场地;,/vt./@投;,/vt./@擲;,/n./@投球;,/n./@傾斜度;,/n./@顛簸;,/vt./@搭@(帳篷);,/vt./@紮@(營);
 pivot ,/n./@樞軸;,/n./@中心點;,/adj./@樞軸的;
 pixel ,/n./@像素;
+pixie ,/n./@小精灵;
 place ,/n./@地點;
 plaid ,/n./@彩格呢;,/n./@彩格布;,/n./@格子圖案;,/n./@彩格披肩;
 plain ,/adj./@原始的;,/adj./@樸素的;,/n./@平原;
