--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1016,6 +1016,7 @@ overlap ,/v./@重叠;,/v./@重复;
 oxidize ,/vt./@氧化;
 pacific ,/adj./@和平的;
 package ,/n./@包裹;,/n./@包;
+padlock ,/n./@挂锁;
 pageant ,/n./@露天歷史劇;,/n./@慶典;,/n./@盛裝遊行;,/n./@紛繁的場景;,/n./@選美比賽;
 paladin ,/n./@騎士;,/n./@遊俠;
 palpate ,/vt./@觸診;
@@ -1600,6 +1601,7 @@ waybill ,/n./@乘客名單;,/n./@運貨單;
 weather ,/n./@天氣;
 webpage ,/n./@網頁;
 wedding ,/n./@婚禮;,/n./@婚宴;,/n./@結婚;,/n./@結合;
+wedlock ,/n./@婚姻;
 welcome ,/n./@歡迎;
 welfare ,/n./@福利;
 whereas ,/conj./@然而;,/conj./@鑒于;,/conj./@盡管;
