--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -138,6 +138,7 @@ backdrop ,/n./@背景幕;,/n./@背景;
 backward ,/adj./@向后的;
 bacteria ,/n./@細菌;
 badmouth ,/vt./@詆毀;,/vt./@批評;
+banality ,/n./@平庸;
 bandange ,/n./@绷带;
 banister ,/n./@欄杆的支柱;
 baseball ,/n./@棒球;
