--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -285,6 +285,7 @@ corporeal ,/adj./@物质的;
 correlate ,/v./@关联;
 corrosive ,/adj./@腐蝕的;,/adj./@腐蝕性的;,/n./@腐蝕物;,/n./@腐蝕劑;
 cosmology ,/n./@宇宙学;
+coupledom ,/n./@情侣关系;
 courteous ,/adj./@有禮貌的;
 courtesan ,/n./@高级妓女;
 craftsman ,/n./@工匠;,/n./@技工;,/n./@工藝師;
