--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -4,6 +4,7 @@ abominable
 abrogation
 absolutely
 abstemious
+abstinence
 accelerate
 acceptable
 acceptance
@@ -802,6 +803,7 @@ technology
 telepathic
 television
 temptation
+tenderness
 tenebrific
 tetragraph
 theocratic
