--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -1016,6 +1016,7 @@ overlap
 oxidize
 pacific
 package
+padlock
 pageant
 paladin
 palpate
@@ -1600,6 +1601,7 @@ waybill
 weather
 webpage
 wedding
+wedlock
 welcome
 welfare
 whereas
