--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -512,6 +512,7 @@ mackintosh ,/n./@雨衣;
 Madagascan ,/adj./@馬達加斯加的;,/n./@馬達加斯加人;,/adj./@馬達加斯加人的;
 Madagascar ,/n./@馬達加斯加;
 magistrate ,/n./@地方执法官;
+maidenhood ,/n./@处女时期;,/n./@童贞;
 mainstream ,/n./@主流;
 malevolent ,/adj./@惡毒的;,/adj./@有惡意的;
 manipulate ,/v./@操纵;,/v./@操作;,/v./@摆布;,/vt./@篡改;
