--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1432,6 +1432,7 @@ weave ,/v./@編織;
 wedge ,/v./@楔入;,/n./@楔子;
 weird ,/adj./@奇怪的;
 Welsh ,/adj./@威爾斯的;,/adj./@威爾斯人的;,/adj./@威爾斯語的;,/n./@威爾斯人;,/n./@威爾斯語;
+wench ,/n./@少妇;
 whack ,/v./@重擊;
 whale ,/n./@鯨魚;
 wharf ,/n./@碼頭;,/n./@停泊處;
