--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1702,6 +1702,7 @@ vilify ,/v./@誹謗;,/v./@辱駡;,/vt./@诋毁;
 violet ,/n./@紫羅蘭;,/n./@紫色;,/adj./@紫色的;,/n./@紫蘿蘭色;,/adj./@紫蘿蘭色的;
 violin ,/n./@小提琴;
 virgin ,/n./@處女;
+virile ,/adj./@有男子气概的;,/adj./@强势的;
 virtue ,/n./@美德;
 vision ,/n./@想象;,/n./@景象;,/n./@視力;
 visual ,/adj./@視覺的;
