--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1000,6 +1000,7 @@ orifice ,/n./@孔;,/n./@口;,/n./@洞;
 origami ,/n./@日本摺紙藝術;
 osmotic ,/adj./@渗透的;
 ossuary ,/n./@藏屍堂;
+ostrich ,/n./@鸵鸟;
 outcast ,/n./@被逐出的人;,/n./@被拋棄的人;,/adj./@被拋棄的;,/adj./@被逐出的;
 outcome ,/n./@結果;
 outdoor ,/adj./@室外的;,/adj./@野外的;,/adj./@露天的;
