--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -729,6 +729,7 @@ marijuana ,/n./@大麻;
 martyrdom ,/n./@殉難;,/n./@殉教;,/n./@折磨;,/n./@受難;
 marvelous ,/adj./@了不起的;,/adj./@非凡的;,/adj./@令人惊异的;,/adj./@不平常的;
 masculine ,/adj./@男性的;,/adj./@陽性的;,/adj./@男子氣概的;,/n./@男性;,/n./@陽性;
+masochist ,/n./@受虐狂者;
 maternity ,/n./@母性;,/n./@母亲身份;,/n./@母愛;,/n./@產科病房;,/adj./@產婦的;,/adj./@產科的;
 matriarch ,/n./@女统治者;,/n./@女家长;
 matricide ,/n./@弑母;
