--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1709,6 +1709,7 @@ visual ,/adj./@視覺的;
 volume ,/n./@容量;,/n./@體積;,/n./@音量;,/n./@卷;,/v./@卷起;
 vortex ,/n./@渦流;,/n./@漩渦;,/n./@中心;,/n./@旋風;
 voyage ,/n./@航行;,/n./@航海;,/n./@航空;
+voyeur ,/n./@窥淫癖者;
 vulgar ,/adj./@粗俗的;,/n./@平民;,/adj./@粗魯的;,/adj./@通俗的;,/adj./@大眾的;,/adj./@庶民的;,/adj./@下流的;,/adj./@鄉土語的;
 waffle ,/n./@華夫;,/v./@胡扯;,/v./@閒聊;
 waiter ,/n./@侍者;,/n./@服務員;
