--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -21,7 +21,7 @@ anticipated ,/adj./@预期的;
 apocalyptic ,/adj./@預言的;
 apologetics ,/n./@護教學;,/n./@辯惑學;
 application ,/n./@申请;,/n./@應用;
-appointment ,/n./@约会;
+appointment ,/n./@约会;,/n./@任命;
 appreciable ,/adj./@可感知的;
 approbation ,/n./@同意;
 appropriate ,/adj./@适当的;
