--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -453,6 +453,7 @@ devout ,/adj./@虔誠的;,/adj./@衷心的;
 dexter ,/adj./@右侧的;
 dialog ,/redirected./@target="dialogue";
 diaper ,/n./@尿布;
+diddle ,/vt./@哄骗;
 diesel ,/n./@柴油機;,/n./@柴油;
 differ ,/v./@不同;
 digest ,/v./@消化;,/v./@吸收;,/n./@文摘;
